<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plomo_suave"
    android:orientation="vertical"
    tools:context="application.ucweb.proyectoecoinca.BuscarActivity">

    <include layout="@layout/toolbar_principal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".12"
            android:background="@color/celeste"
            android:gravity="bottom|center"
            android:weightSum="1">

            <EditText
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".85"
                android:background="@drawable/redondear_busqueda_textview"
                android:drawableLeft="@drawable/icono_buscar"
                android:hint="@string/ingrese_caracter"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/celeste"
                android:textColorHint="@color/celeste"
                android:textSize="@dimen/letra_s4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".18"
            android:background="@color/celeste"
            android:gravity="bottom"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/filtros_busqueda"
                android:textSize="@dimen/letra_s5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvBusqueda"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/blanco"
                app:rrvLayoutType="LinearLayout" />

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/redondear_ecoinca"
                android:text="@string/nav_buscar"
                android:textColor="@color/blanco" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
